After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683699 - Crash when closing test-empathy-roster-model-aggregator
Crash when closing test-empathy-roster-model-aggregator
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Contact List
2.33.x
Other Linux
: Normal normal
: 3.6
Assigned To: empathy-maint
empathy-maint
: 683675 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-09-10 07:41 UTC by Guillaume Desmottes
Modified: 2012-09-11 08:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
roster-view: clear the view when disposing (1.99 KB, patch)
2012-09-10 09:19 UTC, Guillaume Desmottes
none Details | Review

Description Guillaume Desmottes 2012-09-10 07:41:26 UTC
- Start test-empathy-roster-model-aggregator --groups
- Close the window


(lt-test-empathy-roster-model-aggregator:30209): GLib-GObject-WARNING **: invalid uninstantiatable type `(null)' in cast to `EmpathyRosterGroup'



(gdb) bt
  • #0 g_logv
    at gmessages.c line 967
  • #1 g_log
    at gmessages.c line 1003
  • #2 g_type_check_instance_cast
    at gtype.c line 4009
  • #3 at_least_one_group_displayed
    at empathy-roster-view.c line 272
  • #4 check_if_empty
    at empathy-roster-view.c line 287
  • #5 remove_from_displayed
    at empathy-roster-view.c line 823
  • #6 empathy_roster_view_remove
    at empathy-roster-view.c line 1258
  • #7 g_cclosure_marshal_VOID__OBJECT
    at gmarshal.c line 1272
  • #8 g_type_class_meta_marshal
    at gclosure.c line 970
  • #9 g_closure_invoke
    at gclosure.c line 777
  • #10 signal_emit_unlocked_R
    at gsignal.c line 3481
  • #11 g_signal_emit_valist
    at gsignal.c line 3300
  • #12 g_signal_emit
    at gsignal.c line 3356
  • #13 gtk_container_remove
    at gtkcontainer.c line 1546
  • #14 gtk_widget_dispose
    at gtkwidget.c line 10263
  • #15 empathy_roster_contact_dispose
    at empathy-roster-contact.c line 329
  • #16 g_object_run_dispose
    at gobject.c line 1061
  • #17 gtk_widget_destroy
    at gtkwidget.c line 3957
  • #18 egg_list_box_real_forall_internal
    at egg-list-box.c line 1446
  • #19 gtk_container_foreach
    at gtkcontainer.c line 2093
  • #20 gtk_container_destroy
    at gtkcontainer.c line 1377
  • #21 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 85
  • #22 g_type_class_meta_marshal
    at gclosure.c line 970
  • #23 g_closure_invoke
    at gclosure.c line 777
  • #24 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #25 g_signal_emit_valist
    at gsignal.c line 3300
  • #26 g_signal_emit
    at gsignal.c line 3356
  • #27 gtk_widget_dispose
    at gtkwidget.c line 10274
  • #28 empathy_roster_view_dispose
    at empathy-roster-view.c line 1061
  • #29 g_object_run_dispose
    at gobject.c line 1061
  • #30 gtk_widget_destroy
    at gtkwidget.c line 3957
  • #31 gtk_bin_forall
  • #32 gtk_container_foreach
    at gtkcontainer.c line 2093
  • #33 gtk_container_destroy
    at gtkcontainer.c line 1377
  • #34 gtk_viewport_destroy
    at gtkviewport.c line 307
  • #35 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 85
  • #36 g_type_class_meta_marshal
    at gclosure.c line 970
  • #37 g_closure_invoke
    at gclosure.c line 777
  • #38 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #39 g_signal_emit_valist
    at gsignal.c line 3300
  • #40 g_signal_emit
    at gsignal.c line 3356
  • #41 gtk_widget_dispose
    at gtkwidget.c line 10274
  • #42 g_object_run_dispose
    at gobject.c line 1061
  • #43 gtk_widget_destroy
    at gtkwidget.c line 3957
  • #44 gtk_bin_forall
    at gtkbin.c line 170
  • #45 gtk_scrolled_window_forall
    at gtkscrolledwindow.c line 1586
  • #46 gtk_container_foreach
    at gtkcontainer.c line 2093
  • #47 gtk_container_destroy
    at gtkcontainer.c line 1377
  • #48 gtk_scrolled_window_destroy
    at gtkscrolledwindow.c line 1269
  • #49 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 85
  • #50 g_type_class_meta_marshal
    at gclosure.c line 970
  • #51 g_closure_invoke
    at gclosure.c line 777
  • #52 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #53 g_signal_emit_valist
    at gsignal.c line 3300
  • #54 g_signal_emit
    at gsignal.c line 3356
  • #55 gtk_widget_dispose
    at gtkwidget.c line 10274
  • #56 g_object_run_dispose
    at gobject.c line 1061
  • #57 gtk_widget_destroy
    at gtkwidget.c line 3957
  • #58 gtk_box_forall
    at gtkbox.c line 1865
  • #59 gtk_container_foreach
    at gtkcontainer.c line 2093
  • #60 gtk_container_destroy
    at gtkcontainer.c line 1377
  • #61 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 85
  • #62 g_type_class_meta_marshal
    at gclosure.c line 970
  • #63 g_closure_invoke
    at gclosure.c line 777
  • #64 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #65 g_signal_emit_valist
    at gsignal.c line 3300
  • #66 g_signal_emit
    at gsignal.c line 3356
  • #67 gtk_widget_dispose
    at gtkwidget.c line 10274
  • #68 g_object_run_dispose
    at gobject.c line 1061
  • #69 gtk_widget_destroy
    at gtkwidget.c line 3957
  • #70 gtk_bin_forall
    at gtkbin.c line 170
  • #71 gtk_container_foreach
    at gtkcontainer.c line 2093
  • #72 gtk_container_destroy
    at gtkcontainer.c line 1377
  • #73 gtk_window_destroy
    at gtkwindow.c line 4745
  • #74 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 85
  • #75 g_type_class_meta_marshal
    at gclosure.c line 970
  • #76 g_closure_invoke
    at gclosure.c line 777
  • #77 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #78 g_signal_emit_valist
    at gsignal.c line 3300
  • #79 g_signal_emit
    at gsignal.c line 3356
  • #80 gtk_widget_dispose
    at gtkwidget.c line 10274
  • #81 gtk_window_dispose
    at gtkwindow.c line 2430
  • #82 g_object_run_dispose
    at gobject.c line 1061
  • #83 gtk_widget_destroy
    at gtkwidget.c line 3957
  • #84 gtk_main_do_event
    at gtkmain.c line 1599
  • #85 _gdk_event_emit
    at gdkevents.c line 69
  • #86 gdk_event_source_dispatch
    at gdkeventsource.c line 358
  • #87 g_main_dispatch
    at gmain.c line 2715
  • #88 g_main_context_dispatch
    at gmain.c line 3219
  • #89 g_main_context_iterate
    at gmain.c line 3290
  • #90 g_main_loop_run
    at gmain.c line 3484
  • #91 gtk_main
    at gtkmain.c line 1162
  • #92 main
    at test-empathy-roster-model-aggregator.c line 161

Comment 1 Guillaume Desmottes 2012-09-10 09:19:27 UTC
Created attachment 223887 [details] [review]
roster-view: clear the view when disposing
Comment 2 Guillaume Desmottes 2012-09-10 10:45:18 UTC
*** Bug 683675 has been marked as a duplicate of this bug. ***
Comment 3 Xavier Claessens 2012-09-11 07:52:16 UTC
+1
Comment 4 Guillaume Desmottes 2012-09-11 08:11:05 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.