roster-view: clear the view when disposing

https://bugzilla.gnome.org/show_bug.cgi?id=683699